--- a/app/utilities/date-picker/date-picker.component.html
+++ b/app/utilities/date-picker/date-picker.component.html
@@ -1,3 +1,3 @@
-<label [attr.for]="label.toLowerCase() + 'field'">{{label}}</label>
-<input type="text" class="form-control" [attr.id]="label.toLowerCase() + 'field'" [(ngModel)]="theDate" readonly required>
+<label [attr.for]="labelId + 'field'">{{theLabel}}</label>
+<input type="text" class="form-control" [attr.id]="labelId + 'field'" [(ngModel)]="theDate" readonly required>
 <span class="form-control-feedback"></span>
