Added URL for go-live

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -18,7 +18,7 @@
                             <p>Securely view and manage your your tacho data from your web browser.</p>
                             <p>
                                 <a class="btn btn-lg btn-primary" role="button" [routerLink]="['Login']">Log In Now</a>
-                                <a href="http://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download</a>
+                                <a href="https://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download</a>
                             </p>
                         </div>
                         <div class="col-xs-12 col-md-3 hidden-xs">
@@ -118,7 +118,7 @@
         </div>
     </div>
     <div class="row text-center">
-        <a href="http://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download For Free</a>
+        <a href="https://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download For Free</a>
     </div>
 
     <div class="hr-divider"></div>
