--- a/app/calibrations-due/calibrations-due.component.html
+++ b/app/calibrations-due/calibrations-due.component.html
@@ -19,10 +19,10 @@
     </form>
     <hr/>
 
-    <p class="text-center" *ngIf="!isRequesting && (!calibrationsDue || calibrationsDue.length === 0)">No data to display</p>
+    <p class="text-center" *ngIf="!isRequesting && (!calibrationsDue || calibrationsDue.length === 0 || !depotNames || depotNames.length === 1)">No data to display</p>
 
-    <div class="table-responsive">
-        <table class="table table-striped table-hover" *ngIf="calibrationsDue && calibrationsDue.length > 0">
+    <div class="table-responsive" *ngIf="calibrationsDue && calibrationsDue.length > 0 && depotNames && depotNames.length > 1">
+        <table class="table table-striped table-hover">
             <thead>
                 <tr>
                     <th>&nbsp;</th>
