--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -38,6 +38,8 @@
 
     <p class="text-center" *ngIf="!isRequesting && (!recentCalibrations || recentCalibrations.length === 0)">No data to display</p>
 
+    <spinner *ngIf="isRequesting" [isRunning]="isRequesting"></spinner>
+
     <div class="table-responsive" *ngIf="recentCalibrations && recentCalibrations.length > 0">
         <table class="table table-striped table-hover">
             <thead>
@@ -53,11 +55,6 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngIf="isRequesting">
-                    <td colspan="8" class="text-center">
-                        <spinner [isRunning]="isRequesting"></spinner>
-                    </td>
-                </tr>
                 <tr *ngFor="let recentCalibration of filteredCalibrations | paginate: { itemsPerPage: 10, currentPage: page, totalItems: total }"
                     class="pointer" (click)="downloadCertificate($event, recentCalibration)">
                     <td>
