Upgrade to new Angular 2 forms

--- a/app/register-user/register-user.component.html
+++ b/app/register-user/register-user.component.html
@@ -6,23 +6,22 @@
             <div *ngIf="validationErrors" [innerHtml]="validationErrors" class="alert alert-danger"></div>
             <div class="form-group has-feedback">
                 <label for="emailAddress">Email address</label>
-                <input type="email" class="form-control" id="emailAddress" placeholder="you@example.com" [(ngModel)]="userRegistration.emailAddress"
+                <input type="email" class="form-control" id="emailAddress" placeholder="you@example.com" name="emailAddress" [(ngModel)]="userRegistration.emailAddress"
                     ngControl="emailAddress" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
                 <label for="companyName">Company Name</label>
-                <input type="text" class="form-control" id="companyName" [(ngModel)]="userRegistration.companyName" ngControl="companyName"
-                    required>
+                <input type="text" class="form-control" id="companyName" name="companyName" [(ngModel)]="userRegistration.companyName" ngControl="companyName" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
                 <label for="password">Enter a password</label>
-                <input type="password" class="form-control" id="password" [(ngModel)]="userRegistration.password" required>
+                <input type="password" class="form-control" id="password" name="password" [(ngModel)]="userRegistration.password" required>
             </div>
             <div class="form-group has-feedback">
                 <label for="confirmPassword">Confirm password</label>
-                <input type="password" class="form-control" id="confirmPassword" [(ngModel)]="confirmPassword" required>
+                <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" [(ngModel)]="confirmPassword" required>
             </div>
             <div class="form-group has-feedback">
                 <date-picker label="License Expiration Date" (dateChanged)="getLicenseKey($event)" date="{{userRegistration.expiration}}"></date-picker>
