--- a/app/generate-email/generate-email.component.html
+++ b/app/generate-email/generate-email.component.html
@@ -29,7 +29,7 @@
         <div class="col-xs-12 col-sm-6" *ngIf="reportType === 'CalibrationsDue'">
             <div class="form-group has-feedback">
                 <label for="to">To</label>
-                <input type="date" class="form-control" id="to" [(ngModel)]="generateReport.to" required>
+                <input type="date" class="form-control" id="to" name="to" [(ngModel)]="generateReport.to" required>
                 <span class="form-control-feedback"></span>
             </div>
         </div>
