--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -5,17 +5,17 @@
         <form role="form" class="form-signup" (ngSubmit)="authenticate(username, password, rememberMe)">
             <div class="form-group has-feedback">
                 <label for="inputEmail">Username</label>
-                <input [(ngModel)]="username" type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
+                <input [(ngModel)]="username" type="text" name="inputEmail" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
                 <label for="inputPassword">Password</label>
-                <input [(ngModel)]="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                <input [(ngModel)]="password" name="inputPassword" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div id="remember" class="checkbox">
                 <label>
-                    <input [(ngModel)]="rememberMe" type="checkbox" value="remember-me"> Remember me
+                    <input [(ngModel)]="rememberMe" name="rememberMe" type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
             <wc-button [isDisabled]="isRequesting" [style]="'btn btn-lg btn-primary btn-block btn-signin'" [label]="'Sign In'" [workingLabel]="'Signing in...'"></wc-button>
