--- a/app/app.component.html
+++ b/app/app.component.html
@@ -8,31 +8,31 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a [routerLink]="['Home']" class="navbar-brand" rel="home" title="Webcal - Tacho Calibration Software">
+            <a [routerLink]="['Home']" angulartics2On="click" angularticsEvent="LogoClick" angularticsCategory="General" class="navbar-brand" rel="home" title="Webcal - Tacho Calibration Software">
                 <img src="/img/logo.png" alt="Skillray Transport Services">
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav pull-right">
-                <li><a [hidden]="!isLoggedIn" [routerLink]="['Dashboard']">Dashboard</a></li>
+                <li><a [hidden]="!isLoggedIn" [routerLink]="['Dashboard']" angulartics2On="click" angularticsEvent="DashboardClick" angularticsCategory="Navbar">Dashboard</a></li>
                 <li class="dropdown" [hidden]="!isLoggedIn">
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a [routerLink]="['QCCheck']">QC Check</a></li>
-                        <li><a [routerLink]="['CentreCheck']">Centre Check</a></li>
-                        <li><a [routerLink]="['GenerateEmail']">Generate Email</a></li>
-                        <li><a [routerLink]="['InspectionData']">Inspection Data</a></li>
-                        <li><a [routerLink]="['CalibrationsDue']">Calibrations Due</a></li>
-                        <li><a [routerLink]="['RegisterUser']">Register User</a></li>
-                        <li><a [routerLink]="['ManageAccess']">Manage Access</a></li>
-                        <li><a [routerLink]="['SoftwareLicenses']">Software Licenses</a></li>
+                        <li><a [routerLink]="['QCCheck']" angulartics2On="click" angularticsEvent="QCCheckClick" angularticsCategory="Navbar">QC Check</a></li>
+                        <li><a [routerLink]="['CentreCheck']" angulartics2On="click" angularticsEvent="CentreCheckClick" angularticsCategory="Navbar">Centre Check</a></li>
+                        <li><a [routerLink]="['GenerateEmail']" angulartics2On="click" angularticsEvent="GenerateEmailClick" angularticsCategory="Navbar">Generate Email</a></li>
+                        <li><a [routerLink]="['InspectionData']" angulartics2On="click" angularticsEvent="InspectionDataClick" angularticsCategory="Navbar">Inspection Data</a></li>
+                        <li><a [routerLink]="['CalibrationsDue']" angulartics2On="click" angularticsEvent="CalibrationsDueClick" angularticsCategory="Navbar">Calibrations Due</a></li>
+                        <li><a [routerLink]="['RegisterUser']" angulartics2On="click" angularticsEvent="RegisterUserClick" angularticsCategory="Navbar">Register User</a></li>
+                        <li><a [routerLink]="['ManageAccess']" angulartics2On="click" angularticsEvent="ManageAccessClick" angularticsCategory="Navbar">Manage Access</a></li>
+                        <li><a [routerLink]="['SoftwareLicenses']" angulartics2On="click" angularticsEvent="SoftwareLicensesClick" angularticsCategory="Navbar">Software Licenses</a></li>
                         <li>
                             <hr/>
                         </li>
-                        <li><a [hidden]="!isLoggedIn" (click)="logout()">Logout</a></li>
+                        <li><a [hidden]="!isLoggedIn" (click)="logout()" angulartics2On="click" angularticsEvent="LogoutClick" angularticsCategory="Navbar">Logout</a></li>
                     </ul>
                 </li>
-                <li><a [hidden]="!isLoggedIn" [routerLink]="['RecentCalibrations']">Recent Calibrations</a></li>
+                <li><a [hidden]="!isLoggedIn" [routerLink]="['RecentCalibrations']" angulartics2On="click" angularticsEvent="RecentCalibrationsClick" angularticsCategory="Navbar">Recent Calibrations</a></li>
             </ul>
         </div>
     </div>
