--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <h1>Dashboard</h1>
     <hr />
     <ul class="dashboard-menu">
-        <li class="col-xs-6 col-sm-4 pointer" *ngFor="let dashboardItem of dashboardItems" (click)="navigate(dashboardItem)">
+        <li class="col-xs-6 col-sm-4 pointer" *ngFor="let dashboardItem of dashboardItems" (click)="navigate(dashboardItem)"  angulartics2On="click" angularticsEvent="{{dashboardItem.text + ' Click'}}" angularticsCategory="Dashboard">
             <p>
                 <i class="fa {{dashboardItem.icon}} fa-4x"></i>
                 <br /><span>{{dashboardItem.text}}</span>
