Address book - part 1

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -26,6 +26,7 @@
                         <li><a [routerLink]="['RegisterUser']" angulartics2On="click" angularticsEvent="RegisterUserClick" angularticsCategory="Navbar">Register User</a></li>
                         <li><a [routerLink]="['ManageAccess']" angulartics2On="click" angularticsEvent="ManageAccessClick" angularticsCategory="Navbar">Manage Access</a></li>
                         <li><a [routerLink]="['SoftwareLicenses']" angulartics2On="click" angularticsEvent="SoftwareLicensesClick" angularticsCategory="Navbar">Software Licenses</a></li>
+                        <li><a [routerLink]="['AddressBook']" angulartics2On="click" angularticsEvent="AddressBookClick" angularticsCategory="Navbar">Address Book</a></li>
                         <li>
                             <hr/>
                         </li>
