--- a/app/address-book/address-book.component.html
+++ b/app/address-book/address-book.component.html
@@ -20,16 +20,33 @@
                     <th>Address</th>
                     <th>Email</th>
                     <th>Secondary Email</th>
+                    <th>&nbsp;</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let addressBookEntry of addressBookEntries | paginate: { itemsPerPage: 10, currentPage: page, totalItems: total }">
+                <tr *ngFor="let addressBookEntry of filteredAddressBookEntries | paginate: { itemsPerPage: 10, currentPage: page, totalItems: total }">
                     <td>{{addressBookEntry.name}}</td>
                     <td>{{addressBookEntry.address}}</td>
-                    <td>{{addressBookEntry.email}}</td>
-                    <td>{{addressBookEntry.secondaryEmail}}</td>
+                    <td><span *ngIf="!addressBookEntry.isEditing">{{addressBookEntry.email}}</span><input *ngIf="addressBookEntry.isEditing" type="email" id="email" name="email" class="form-control" [(ngModel)]="addressBookEntry.email"></td>
+                    <td><span *ngIf="!addressBookEntry.isEditing">{{addressBookEntry.secondaryEmail}}</span><input *ngIf="addressBookEntry.isEditing" type="email" id="secondaryEmail" name="secondaryEmail" class="form-control" [(ngModel)]="addressBookEntry.secondaryEmail"></td>
+                    <td>
+                        <div>
+                            <button *ngIf="addressBookEntry.isEditing" (click)="updateEntry(addressBookEntry)" class="btn btn-secondary">Save</button>
+                            <button *ngIf="addressBookEntry.isEditing" (click)="cancel(addressBookEntry)" class="btn btn-secondary">Cancel</button>
+                            <button *ngIf="!addressBookEntry.isEditing" (click)="selectContactName(addressBookEntry)" class="btn btn-secondary">Edit</button>
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="row" *ngIf="addressBookEntries && addressBookEntries.length > 0">
+        <div class="col-xs-12 col-sm-offset-9 col-sm-3">
+            <div class="form-group">
+                <label for="contactName">Filter by name</label>
+                <input type="text" id="contactName" name="contactName" class="form-control" (keyup)="contactNameChanged(contactName)" [(ngModel)]="contactName">
+            </div>
+        </div>
     </div>
 </div>
