--- a/app/detailed-exceptions/detailed-exceptions.component.html
+++ b/app/detailed-exceptions/detailed-exceptions.component.html
@@ -6,6 +6,11 @@
 
     <spinner [isRunning]="isRequesting"></spinner>
 
+    <div class="row">
+        <div class="col-xs-12">
+            <pagination-controls class="text-right" [id]="paginationConfig.id" (pageChange)="onPageChange($event)"></pagination-controls>
+        </div>
+    </div>
     <div class="table-responsive" *ngIf="detailedExceptions && detailedExceptions.length > 0">
         <table class="table table-striped table-hover">
             <thead>
@@ -17,13 +22,14 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let detailedException of detailedExceptions | paginate: { itemsPerPage: 10, currentPage: p }" class="pointer">
-                    <td class="text-truncate" (click)="showExceptionMessage(detailedException)">{{detailedException.message}}</td>                
+                <tr *ngFor="let detailedException of detailedExceptions | paginate: paginationConfig" class="pointer">
+                    <td class="text-truncate" (click)="showExceptionMessage(detailedException)">{{detailedException.message}}</td>
                     <td>{{asDate(detailedException.date) | date}}</td>
                     <td>{{detailedException.company}}</td>
                     <td>
                         <button class="btn btn-secondary" (click)="showRawImage($event, detailedException)">View Image</button>
-                        <wc-button [isDisabled]="isDeleting" (click)="deleteDetailedException($event, detailedException)" [style]="'btn btn-secondary'" [label]="'Delete'" [workingLabel]="'Delete'"></wc-button>
+                        <wc-button [isDisabled]="isDeleting" (click)="deleteDetailedException($event, detailedException)" [style]="'btn btn-secondary'"
+                            [label]="'Delete'" [workingLabel]="'Delete'"></wc-button>
                     </td>
                 </tr>
             </tbody>
