--- a/app/manage-access/manage-access.component.html
+++ b/app/manage-access/manage-access.component.html
@@ -15,6 +15,11 @@
         </div>
     </form>
     <hr/>
+    <div class="row">
+        <div class="col-xs-12">
+            <pagination-controls class="text-right" [id]="paginationConfig.id" (pageChange)="onPageChange($event)"></pagination-controls>
+        </div>
+    </div>
 
     <spinner [isRunning]="isRequesting"></spinner>
 
@@ -29,11 +34,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let site of connectedSites">
+                <tr *ngFor="let site of connectedSites | paginate: paginationConfig">
                     <td>{{site.description}}</td>
                     <td class="actions">
                         <wc-button [isDisabled]="isUpdating" [style]="'btn btn-secondary pull-right'" [label]="site.isRevoked ? 'Authorize' : 'Revoke'"
-                        [workingLabel]="site.isRevoked ? 'Authorize' : 'Revoke'" (click)="toggleAccess(site)"></wc-button>
+                            [workingLabel]="site.isRevoked ? 'Authorize' : 'Revoke'" (click)="toggleAccess(site)"></wc-button>
                     </td>
                 </tr>
             </tbody>
