--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -29,8 +29,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 text-right" *ngIf="!isRequesting && recentCalibrations && recentCalibrations.length > 0">
-                <pagination-controls class="text-right" (pageChange)="p = $event; page = p;" #api></pagination-controls>
+            <div class="col-xs-12 text-right">
+                <pagination-controls class="text-right" [id]="paginationConfig.id" (pageChange)="onPageChange($event)"></pagination-controls>
             </div>
         </div>
     </form>
@@ -55,7 +55,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let recentCalibration of filteredCalibrations | paginate: { itemsPerPage: 10, currentPage: page, totalItems: total }"
+                <tr *ngFor="let recentCalibration of filteredCalibrations | paginate: paginationConfig"
                     class="pointer" (click)="downloadCertificate($event, recentCalibration)">
                     <td>
                         <img src="/img/{{recentCalibration.documentIcon}}.png" [attr.alt]="recentCalibration.documentType" />
