Auto hide pagination controls

--- a/app/address-book/address-book.component.html
+++ b/app/address-book/address-book.component.html
@@ -4,7 +4,7 @@
 
     <div class="row">
         <div class="col-xs-12 text-right">
-            <pagination-controls class="text-right" [id]="paginationConfig.id" (pageChange)="onPageChange($event)"></pagination-controls>
+            <pagination-controls class="text-right" [id]="paginationConfig.id" [autoHide]="true" [directionLinks]="true" (pageChange)="onPageChange($event)"></pagination-controls>
         </div>
     </div>
 
