--- a/app/detailed-exceptions/detailed-exceptions.component.html
+++ b/app/detailed-exceptions/detailed-exceptions.component.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <pagination-controls class="text-right" [id]="paginationConfig.id" (pageChange)="onPageChange($event)"></pagination-controls>
+            <pagination-controls class="text-right" [id]="paginationConfig.id" [autoHide]="true" [directionLinks]="true" (pageChange)="onPageChange($event)"></pagination-controls>
         </div>
     </div>
     <div class="table-responsive" *ngIf="detailedExceptions && detailedExceptions.length > 0">
