Enable status reports to be generated

--- a/app/status-report/status-report.component.html
+++ b/app/status-report/status-report.component.html
@@ -13,13 +13,15 @@
                 </div>
                 <wc-button [isDisabled]="isRequesting" (click)="loadReport(selectedSiteId)" [style]="'btn btn-primary'" [label]="'Update'"
                     [workingLabel]="'Updating...'"></wc-button>
+                <wc-button [isDisabled]="isBuildingReport" (click)="buildReport()" [style]="'btn btn-primary'" [label]="'Build Report'"
+                    [workingLabel]="'Building Report...'"></wc-button>
             </div>
         </div>
     </form>
     <hr *ngIf="users && users.length > 0" />
 
     <spinner [isRunning]="isRequesting"></spinner>
-    
+
     <p class="text-center" *ngIf="!isRequesting && !hasData">No data to display</p>
 
     <div class="row-wrapper" [hidden]="!hasData">
