--- a/src/site.css
+++ b/src/site.css
@@ -4,234 +4,187 @@ body {
   font-size: 16px;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
-  margin-bottom: 90px;
-}
+  margin-bottom: 90px; }
 
 * {
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.3);
-}
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.3); }
 
 p {
-  line-height: 24px;
-}
+  line-height: 24px; }
 
 a {
   color: #bd362f;
-  cursor: pointer;
-}
-a:hover {
-  text-decoration: none;
-}
+  cursor: pointer; }
+  a:hover {
+    text-decoration: none; }
 
 h1 {
   font-family: Source Sans Pro, sans-serif;
   font-size: 36px;
   font-weight: 200;
   color: #555;
-  margin-bottom: 20px;
-}
+  margin-bottom: 20px; }
 
 h2 {
   font-family: Source Sans Pro, sans-serif;
   font-size: 30px;
   font-weight: 300;
   color: #444;
-  margin: 30px 0;
-}
+  margin: 30px 0; }
 
 h3 {
   font-family: Source Sans Pro, sans-serif;
   font-size: 20px;
   font-weight: 400;
-  margin: 20px 0;
-}
+  margin: 20px 0; }
 
 h4 {
   font-family: Source Sans Pro, sans-serif;
   font-size: 18px;
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 h5 {
-  font-family: Source Sans Pro, sans-serif;
-}
+  font-family: Source Sans Pro, sans-serif; }
 
 h6 {
-  font-family: Source Sans Pro, sans-serif;
-}
+  font-family: Source Sans Pro, sans-serif; }
 
 nav {
   background: #f5f5f5;
   border-bottom: 1px solid #eee;
-  padding: 15px 0;
-}
-nav .navbar-nav {
-  margin: 10px 0 0;
-}
-nav.navbar {
-  margin-bottom: 0;
-}
+  padding: 15px 0; }
+  nav .navbar-nav {
+    margin: 10px 0 0; }
+  nav.navbar {
+    margin-bottom: 0; }
 
 .carousel {
   height: 500px;
   margin-bottom: 60px;
-  background: url(../images/slide-bg.png) no-repeat bottom center;
-}
-.carousel .item {
-  height: 500px;
-}
+  background: url(../public/images/slide-bg.png) no-repeat bottom center; }
+  .carousel .item {
+    height: 500px; }
 
 .carousel-caption {
   z-index: 10;
-  bottom: 80px;
-}
-.carousel-caption p {
-  color: #888;
-  font-size: 24px;
-  font-weight: 200;
-}
-.carousel-caption a.btn {
-  margin-top: 10px;
-}
+  bottom: 80px; }
+  .carousel-caption p {
+    color: #888;
+    font-size: 24px;
+    font-weight: 200; }
+  .carousel-caption a.btn {
+    margin-top: 10px; }
 
 .carousel-inner > .item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
-}
+  height: 500px; }
 
 .hr-divider {
-  background: url(../images/slide-bg.png) no-repeat bottom center;
+  background: url(../public/images/slide-bg.png) no-repeat bottom center;
   width: 1170px;
   height: 100px;
   margin-bottom: 50px;
   display: block;
-  clear: both;
-}
+  clear: both; }
 
 .feature-box {
-  text-align: center;
-}
+  text-align: center; }
 
 .cnt-title {
   text-align: center;
-  margin-bottom: 50px;
-}
-.cnt-title span {
-  font-size: 24px;
-  font-weight: 200;
-}
+  margin-bottom: 50px; }
+  .cnt-title span {
+    font-size: 24px;
+    font-weight: 200; }
 
 .review {
-  margin: 80px 0;
-}
+  margin: 80px 0; }
 
 .page-header {
-  border-bottom: 1px solid #f5f5f5;
-}
+  border-bottom: 1px solid #f5f5f5; }
 
 .media {
-  margin-bottom: 50px;
-}
+  margin-bottom: 50px; }
 
 #map-canvas {
   height: 400px;
   border: 15px solid #fff;
-  box-shadow: 0 0 0 1px #f5f5f5;
-}
+  box-shadow: 0 0 0 1px #f5f5f5; }
 
 .blog-post {
   border-bottom: 2px solid #f5f5f5;
   padding: 0 0 50px;
-  margin-bottom: 40px;
-}
-.blog-post p {
-  margin: 20px 0;
-}
+  margin-bottom: 40px; }
+  .blog-post p {
+    margin: 20px 0; }
 
 .postmetadata {
   margin-bottom: 20px;
-  padding: 5px 0;
-}
-.postmetadata ul {
-  margin: 0;
-  padding: 0;
-}
-.postmetadata ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-.postmetadata i {
-  margin: 4px 5px 0 0;
-}
+  padding: 5px 0; }
+  .postmetadata ul {
+    margin: 0;
+    padding: 0; }
+    .postmetadata ul li {
+      display: inline-block;
+      margin-right: 20px; }
+  .postmetadata i {
+    margin: 4px 5px 0 0; }
 
 .side-bar {
-  margin-bottom: 30px;
-}
-.side-bar ul {
-  margin: 0;
-  padding: 0;
-}
-.side-bar ul li {
-  list-style: none;
-}
-.side-bar h3 {
-  margin-bottom: 10px;
-}
+  margin-bottom: 30px; }
+  .side-bar ul {
+    margin: 0;
+    padding: 0; }
+    .side-bar ul li {
+      list-style: none; }
+  .side-bar h3 {
+    margin-bottom: 10px; }
 
 .recent-post strong {
   display: block;
   margin-bottom: 5px;
-  color: #888;
-}
+  color: #888; }
 .recent-post li {
-  margin-bottom: 15px;
-}
+  margin-bottom: 15px; }
 
 footer {
   border-top: 1px solid #eee;
   background: #f5f5f5;
   padding: 26px 0;
   color: #ccc;
-  margin-top: 40px;
-}
+  margin-top: 40px; }
 
 .navbar-toggle .icon-bar {
-  background-color: #000;
-}
+  background-color: #000; }
 
 .thumbnail h2 {
   font-size: 25px;
-  text-align: center;
-}
+  text-align: center; }
 .thumbnail p {
   font-size: 16px;
   font-style: italic;
   text-align: center;
   padding-left: 3px;
   padding-right: 3px;
-  padding-bottom: 5px;
-}
+  padding-bottom: 5px; }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
   position: relative;
-  min-height: 100%;
-}
+  min-height: 100%; }
 
 wc-app > undefined > .container {
-  padding-bottom: 50px;
-}
+  padding-bottom: 50px; }
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: #f5f5f5;
-}
+  background-color: #f5f5f5; }
 
 .btn.btn-primary, pagination-controls .pagination .current, .is-selected .pika-button, .pika-button:hover {
   color: #fff !important;
@@ -243,17 +196,14 @@ wc-app > undefined > .container {
   border-color: #bd362f #bd362f #802420 !important;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25) !important;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffee5f5b',endColorstr='#ffbd362f',GradientType=0) !important;
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false) !important;
-}
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false) !important; }
 
 .pointer {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .card-container.card {
   max-width: 400px;
-  padding: 40px 40px;
-}
+  padding: 40px 40px; }
 
 .card {
   background-color: #F7F7F7;
@@ -267,8 +217,7 @@ wc-app > undefined > .container {
   border-radius: 2px;
   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-}
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); }
 
 .profile-img-card {
   width: 96px;
@@ -277,8 +226,7 @@ wc-app > undefined > .container {
   display: block;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
-  border-radius: 50%;
-}
+  border-radius: 50%; }
 
 /*
  * Form styles
@@ -288,8 +236,7 @@ wc-app > undefined > .container {
   font-weight: bold;
   text-align: center;
   margin: 10px 0 0;
-  min-height: 1em;
-}
+  min-height: 1em; }
 
 .reauth-email {
   display: block;
@@ -303,12 +250,10 @@ wc-app > undefined > .container {
   white-space: nowrap;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 .form-signup {
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 .form-signup input[type=email],
 .form-signup input[type=password],
@@ -324,99 +269,75 @@ wc-app > undefined > .container {
   box-sizing: border-box;
   direction: ltr;
   height: 44px;
-  font-size: 16px;
-}
+  font-size: 16px; }
 
 .form-signup .two-buttons button {
   width: 49%;
-  display: inline-block;
-}
+  display: inline-block; }
 
 #profile-img {
   margin-left: auto;
   margin-right: auto;
-  display: block;
-}
+  display: block; }
 
 .ng2-pagination a, .pagination-previous.disabled span, .pagination-previous a::before, .pagination-previous.disabled::before, .ng2-pagination li.current span {
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 pagination-controls > ul > li.current {
-  background: #da4f49 !important;
-}
+  background: #da4f49 !important; }
 
 pagination-controls li.pagination-previous.disabled, pagination-controls li.pagination-next.disabled {
-  visibility: hidden;
-}
+  visibility: hidden; }
 
 pagination-controls li.current {
-  position: relative;
-}
+  position: relative; }
 
 .ng-valid[required] {
-  border-left: 5px solid #42A948;
-}
+  border-left: 5px solid #42A948; }
 
 .ng-invalid {
-  border-left: 5px solid #a94442;
-}
+  border-left: 5px solid #a94442; }
 
 .pie-legend {
-  list-style-type: none;
-}
-.pie-legend li {
-  display: inline;
-  margin-left: 15px;
-}
-.pie-legend li span {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  margin-right: 5px;
-}
+  list-style-type: none; }
+  .pie-legend li {
+    display: inline;
+    margin-left: 15px; }
+    .pie-legend li span {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      margin-right: 5px; }
 
 @media (max-width: 1024px) {
   hr {
     margin-top: 7px;
-    margin-bottom: 7px;
-  }
+    margin-bottom: 7px; }
 
   .card-container.card {
-    margin-top: 20px;
-  }
-}
+    margin-top: 20px; } }
 @media (max-width: 1024px) {
   .carousel-caption {
-    bottom: 20px;
-  }
-  .carousel-caption img {
-    max-width: 80px;
-    margin-top: 20px;
-  }
-}
+    bottom: 20px; }
+    .carousel-caption img {
+      max-width: 80px;
+      margin-top: 20px; } }
 @media (max-width: 480px) {
   .carousel-caption {
-    bottom: 85px;
-  }
+    bottom: 85px; }
 
   .nav.navbar-nav {
     width: 100%;
-    text-align: center;
-  }
-  .nav.navbar-nav ul.dropdown-menu {
-    text-align: center;
-  }
-}
+    text-align: center; }
+    .nav.navbar-nav ul.dropdown-menu {
+      text-align: center; } }
 @media (max-width: 768px) {
   .card-container.card {
-    padding: 20px 20px;
-  }
-}
+    padding: 20px 20px; } }
 .pika-button {
-  text-align: center;
-}
+  text-align: center; }
 
 .is-today .pika-button {
-  color: #da4f49;
-}
+  color: #da4f49; }
+
+/*# sourceMappingURL=site.css.map */
