--- a/src/site.scss
+++ b/src/site.scss
@@ -1,4 +1,3 @@
-//colors
 $color_storm_dust_approx: #666;
 $white_30: rgba(255,255,255,.3);
 $color_lochmara_approx: #0088cc;
@@ -16,12 +15,10 @@ $color_alto_approx: #ddd;
 $color_wild_sand_approx: #f5f5f5;
 $color_mountain_mist_approx: #999999;
 
-//fonts
 $font_0: Source Sans Pro;
 $font_1: sans-serif;
 
-//urls
-$url_0: url(../images/slide-bg.png);
+$url_0: url(../public/images/slide-bg.png);
 
 %extend_1 {
 	color: $color_mountain_mist_approx;
@@ -109,7 +106,7 @@ nav {
 .carousel {
     height: 500px;
     margin-bottom: 60px;
-    background: url(../images/slide-bg.png) no-repeat bottom center;
+    background: url(../public/images/slide-bg.png) no-repeat bottom center;
 
     .item {
         height: 500px;
