--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
                 <div class="carousel-caption">
                     <div class="row">
                         <div class="col-xs-12 col-md-9">
-                            <img style="max-width:200px; margin-top: -7px;" class="hidden-xs" src="../../../public/images/webcal.png" alt="Webcal Calibration Software">
+                            <img style="max-width:200px; margin-top: -7px;" class="hidden-xs" src="/images/webcal.png" alt="Webcal Calibration Software">
                             <h1>Webcal - Tacho Calibration Software.</h1>
                             <p>Securely view and manage your your tacho data from your web browser.</p>
                             <p>
@@ -22,7 +22,7 @@
                             </p>
                         </div>
                         <div class="col-xs-12 col-md-3 hidden-xs">
-                            <img src="../../../public/images/skillray-truck.png" alt="Skillray Transport Services" />
+                            <img src="/images/skillray-truck.png" alt="Skillray Transport Services" />
                         </div>
                     </div>
                 </div>
@@ -41,21 +41,21 @@
             <span>With Webcal Connect you can easily view and manage your data directly from a web browser.</span>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <img src="../../../public/images/icon3.png">
+            <img src="/images/icon3.png">
             <h2>Data in one place</h2>
             <p>
                 View recent calibrations, re-print your certificates, and manage your fleet with just a couple of clicks.
             </p>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <img src="../../../public/images/icon2.png">
+            <img src="/images/icon2.png">
             <h2>Your customers can use us</h2>
             <p>
                 With 1 click you can add your customers to your account and let them see all their own vehicle data.
             </p>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <img src="../../../public/images/icon1.png">
+            <img src="/images/icon1.png">
             <h2>Its Secure</h2>
             <p>
                 We use advanced encryption algorithms to ensure your data is always safe and secure.
@@ -76,42 +76,42 @@
 
         <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
-                <img class="img-responsive" src="../../../public/images/1-HomeScreen.png" alt="Home Screen">
+                <img class="img-responsive" src="/images/1-HomeScreen.png" alt="Home Screen">
                 <h2>Beautifully Designed Software</h2>
                 <p>That's not just skin deep</p>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
-                <img class="img-responsive" src="../../../public/images/2-NewDigital.png" alt="New Digital Calibration">
+                <img class="img-responsive" src="/images/2-NewDigital.png" alt="New Digital Calibration">
                 <h2>Super fast plaque generator</h2>
                 <p>Print a plaque in less than 5 seconds</p>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
-                <img class="img-responsive" src="../../../public/images/3-TachoHistory.png" alt="Document History">
+                <img class="img-responsive" src="/images/3-TachoHistory.png" alt="Document History">
                 <h2>Comprehensive History</h2>
                 <p>Every calibration just a click away</p>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
-                <img class="img-responsive" src="../../../public/images/4-DriverCardDetails.png" alt="Driver Card Details" style="max-height: 230px">
+                <img class="img-responsive" src="/images/4-DriverCardDetails.png" alt="Driver Card Details" style="max-height: 230px">
                 <h2>Built in Driver Card reader</h2>
                 <p>Can automatically read and display driver card data</p>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
-                <img class="img-responsive" src="../../../public/images/5-Reports.png" alt="Reports">
+                <img class="img-responsive" src="/images/5-Reports.png" alt="Reports">
                 <h2>Detailed Reports</h2>
                 <p>Can generate detailed PDF reports of your recent and upcoming calibrations</p>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 thumb">
             <div class="thumbnail">
-                <img class="img-responsive" src="../../../public/images/6-Options.png" alt="Options">
+                <img class="img-responsive" src="/images/6-Options.png" alt="Options">
                 <h2>Highly Configurable</h2>
                 <p>Webcal is highly flexible and can be pre-populated with vehicles, inspectors, tyre sizes, and lots more</p>
             </div>
