--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a [routerLink]="['Home']" class="navbar-brand" rel="home" title="Webcal - Tacho Calibration Software">
-                <img src="../../public/images/logo.png" alt="Skillray Transport Services">
+                <img src="/images/logo.png" alt="Skillray Transport Services">
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
