--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <div class="card card-container">
-        <img id="profile-img" src="../../../public/images/webcal.png" alt="Webcal Calibration Software" />
+        <img id="profile-img" src="/images/webcal.png" alt="Webcal Calibration Software" />
         <p id="profile-name" class="profile-name-card"></p>
         <form role="form" class="form-signup" (ngSubmit)="authenticate(username, password, rememberMe)">
             <div class="form-group has-feedback">
